# misc

./: README.md  sync.py
cpp/cpp/: cpp.conf
docker/: nouvnc
docker/novnc/: Dockerfile  index.html
docker/oem_10/: install.bat
docker/vm/: qemu.yml
dot/: .privrc  .zshrc  README.md
py/: README.md  dpgtest.py  ff_shrink.py  sync.py  sync.toml  uvass.py
py/scr/: README.md
scr/: README.md  ff_size.py  flcl.py  knock.py  sync.py  uvass.py
scr/al/: README.md  al.py  pyproject.toml
termux/: .tmux.conf  .zshrc  README.md  sync.py
